// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post Should render correctly 1`] = `
<div>
  <article
    class="post__wrapper"
  >
    <a
      href="/pt-BR/blog/slug-for-test"
    >
      <div
        class="post__link"
        title="Some title for testing"
      >
        <div
          class="post__image-wrapper"
        >
          <img
            alt="Some title for testing"
            class="post__image"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            sizes="100vw"
            src="/_next/image?url=%2Fimg%2Fbg.jpg&w=3840&q=75"
            srcset="/_next/image?url=%2Fimg%2Fbg.jpg&w=640&q=75 640w, /_next/image?url=%2Fimg%2Fbg.jpg&w=750&q=75 750w, /_next/image?url=%2Fimg%2Fbg.jpg&w=828&q=75 828w, /_next/image?url=%2Fimg%2Fbg.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimg%2Fbg.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimg%2Fbg.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimg%2Fbg.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimg%2Fbg.jpg&w=3840&q=75 3840w"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
        <div
          class="post__content"
        >
          <h2
            class="post__title"
          >
            Some title for testing
          </h2>
          <p
            class="post__description"
          >
            lorem ipsum dolor sit amet
          </p>
          <em
            class="post__date"
          >
            Postado em
            : 
            <span>
              27/05/2022
            </span>
          </em>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`components/post Should render correctly in en 1`] = `
<div>
  <article
    class="post__wrapper"
  >
    <a
      href="/en/blog/slug-for-test"
    >
      <div
        class="post__link"
        title="Some title for testing"
      >
        <div
          class="post__image-wrapper"
        >
          <img
            alt="Some title for testing"
            class="post__image"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            sizes="100vw"
            src="/_next/image?url=%2Fimg%2Fbg.jpg&w=3840&q=75"
            srcset="/_next/image?url=%2Fimg%2Fbg.jpg&w=640&q=75 640w, /_next/image?url=%2Fimg%2Fbg.jpg&w=750&q=75 750w, /_next/image?url=%2Fimg%2Fbg.jpg&w=828&q=75 828w, /_next/image?url=%2Fimg%2Fbg.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimg%2Fbg.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimg%2Fbg.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimg%2Fbg.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimg%2Fbg.jpg&w=3840&q=75 3840w"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
        <div
          class="post__content"
        >
          <h2
            class="post__title"
          >
            Some title for testing
          </h2>
          <p
            class="post__description"
          >
            lorem ipsum dolor sit amet
          </p>
          <em
            class="post__date"
          >
            Posted at
            : 
            <span>
              05/27/2022
            </span>
          </em>
        </div>
      </div>
    </a>
  </article>
</div>
`;
